--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html>
-  
-  <head>The head!</head>
+  <head><title>The head!</title></head>
   <body>The body!!</body>
 </html>
