Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head><title>The head!</title></head>
+  <head>
+    <title>The head!</title>
+    <link rel="styklesheet" type="text/css" href="style.css">
+  </head>
   <body>The body!!</body>
 </html>
