Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <title>The head!</title>
+    <title>The title!</title>
     <link rel="styklesheet" type="text/css" href="style.css">
   </head>
   <body>The body!!</body>
